--- a/custom_components/guk_krasnodar/manifest.json
+++ b/custom_components/guk_krasnodar/manifest.json
@@ -1,11 +1,14 @@
 {
-  "codeowners": ["@kirill-k2"],
-  "config_flow": true,
-  "dependencies": [],
-  "documentation": "https://github.com/kirill-k2/hass-guk-krasnodar",
   "domain": "guk_krasnodar",
-  "iot_class": "cloud_polling",
   "name": "GUK Krasnodar Personal Cabinet",
+  "documentation": "https://github.com/kirill-k2/hass-guk-krasnodar",
+  "issue_tracker": "https://github.com/kirill-k2/hass-guk-krasnodar/issues",
+  "codeowners": [
+    "@kirill-k2"
+  ],
+  "dependencies": [],
   "requirements": [],
+  "iot_class": "cloud_polling",
+  "config_flow": false,
   "version": "1.0.0"
 }
