--- a/custom_components/guk_krasnodar/manifest.json
+++ b/custom_components/guk_krasnodar/manifest.json
@@ -1,14 +1,14 @@
 {
   "domain": "guk_krasnodar",
   "name": "GUK Krasnodar Personal Cabinet",
-  "documentation": "https://github.com/kirill-k2/hass-guk-krasnodar",
-  "issue_tracker": "https://github.com/kirill-k2/hass-guk-krasnodar/issues",
   "codeowners": [
     "@kirill-k2"
   ],
+  "config_flow": true,
   "dependencies": [],
-  "requirements": [],
+  "documentation": "https://github.com/kirill-k2/hass-guk-krasnodar",
   "iot_class": "cloud_polling",
-  "config_flow": false,
+  "issue_tracker": "https://github.com/kirill-k2/hass-guk-krasnodar/issues",
+  "requirements": [],
   "version": "1.0.0"
 }
