Добавлены расширенные атрибуты к объектам. Добавлен перевод для config_flow. Чистка констант, кода. Исправлена отправка показаний. Добавлена экспериментальная возможность выбирать объект для отравки показаний. Добавлена инструкция по исправлению ошибки корневого сертификата.

--- a/custom_components/guk_krasnodar/manifest.json
+++ b/custom_components/guk_krasnodar/manifest.json
@@ -1,6 +1,6 @@
 {
   "domain": "guk_krasnodar",
-  "name": "GUK Krasnodar Personal Cabinet",
+  "name": "GUK Krasnodar Personal Cabinet (ЛК ГУК Краснодар)",
   "codeowners": [
     "@kirill-k2"
   ],
